--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="assets/logo.png" alt="logo">
             <h2>Hellou</h2>
             <h1>I am Luciano Barborsa</h1>
-            <p>Sou desenvolvedor frontend, com 3 anos de experiência. Já trabalhei com Angular e Vue js em grandes projetos. Adoro aprender coisas novas e trabalhar em equipe</p>
+            <p>Atualmente estudando Front-End, área que mais me chamou atenção na programção</p>
             <button>Entre em contato</button>
         </div>
     </header>
