--- a/index.html
+++ b/index.html
@@ -22,12 +22,19 @@
         <img src="assets/logo.png" alt="logo">
         <ul>
             <a href="#"><i data-feather="user"></i>Sobre min</a>
-            <a href="#"><i data-feather="briefcase"></i>Serviços</a>
-            <a href="#"><i data-feather="image"></i>Portifolio</a>
-            <a href="#"><i data-feather="list"></i>Curriculo</a>
+            <a href="#"><i data-feather="image"></i>Projetos</a>
             <a href="#"><i data-feather="send"></i>Contato</a>
         </ul>
     </nav>
+    <section class="about-ne">
+        <div class="container">
+            <h1>Sobre mim</h1>
+            <p>Meu nome é Lucino Sabino Da Silva Neto, tenho 17 anos e moro em Salvdor - BA. Atualmente estudando Front-End no curso Frontstart. Gosto de transformar designs em páginas web. Além disso acompanho esportes e alimento a imaginação através de jogos, filmes e livros.</p>
+        </div>
+        <div class="img-container">
+            <img src="#" alt="luciano">
+        </div>
+    </section>
     <script>
         feather.replace()
     </script>
