restante do portfólio
Terminando o portfólio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luciano Barborsa</title>
+    <title>Luciano Sabino</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/feather-icons"></script>
 </head>
@@ -13,28 +13,193 @@
         <div class="container">
             <img src="assets/logo.png" alt="logo">
             <h2>Hellou</h2>
-            <h1>I am Luciano Barborsa</h1>
-            <p>Atualmente estudando Front-End, área que mais me chamou atenção na programção</p>
+            <h1>I am Luciano Sabino</h1>
+            <p>Programador Front-End, aqui está uma breve descrição do que eu amo e sei fazer!</p>
             <button>Entre em contato</button>
         </div>
     </header>
     <nav>
         <img src="assets/logo.png" alt="logo">
         <ul>
-            <a href="#"><i data-feather="user"></i>Sobre min</a>
-            <a href="#"><i data-feather="image"></i>Projetos</a>
-            <a href="#"><i data-feather="send"></i>Contato</a>
+            <a href="#aboutme"><i data-feather="user"></i>Sobre me</a>
+            <a href="#services"><i data-feather="briefcase"></i>Habilidades</a>
+            <a href="#portfolio"><i data-feather="image"></i>Portfólio</a>
+            <a href="#curriculum"><i data-feather="list"></i>Currículo</a>
+            <a href="#contact"><i data-feather="send"></i>Contato</a>
         </ul>
     </nav>
-    <section class="about-ne">
+    <section id="aboutme" class="about-ne">
         <div class="container">
-            <h1>Sobre mim</h1>
-            <p>Meu nome é Lucino Sabino Da Silva Neto, tenho 17 anos e moro em Salvdor - BA. Atualmente estudando Front-End no curso Frontstart. Gosto de transformar designs em páginas web. Além disso acompanho esportes e alimento a imaginação através de jogos, filmes e livros.</p>
+            <h1>Sobre me</h1>
+            <p>Meu nome é Lucino Sabino Da Silva Neto, tenho 18 anos e moro em Salvdor - BA, trabalho desde dos meus 14 anos, tenho experiência em Auxiliar Administrativo e Operador de Caixa.<br>Sou uma pessoa entusiasmada, adoro aprender coisas novas a cada dia, com pensamentos fara da caixa adoro fazer mais do que foi pedido, e entregar o máximo de me.
+                <br>Ter um espaço onde eu possa ser criativo e me sentir importante é a chave principal para me, em qualquer área.
+                O que me deixa feliz no campo profissional é a troca de informações, ensinar e ser ensinado faz quem sou.
+                <br>Amo toco violão 😊, ler um bom livro. Gosto de está entre amigos e familiares, amente de um belo fim de tarde e de uma boa música, para apreciar o pôr do sol.
+            </p>
         </div>
         <div class="img-container">
-            <img src="#" alt="luciano">
+            <img src="assets/foto.jpg" alt="luciano Sabino">
         </div>
     </section>
+    <section id="services" class="services">
+        <h1 class="title-purple">Habilidades</h1>
+        <p>Em busca da minha primeira experiência profissional na área de tecnologia e desnvolvimento.<br>Aprofundando os meus conhecimeto em <b style="font-size: 1.2rem;">VUE JS</b>.</p>
+        <div class="services-conteiner">
+            <div class="service-card">
+                <img src="assets/html.png" alt="Ícone de terminal">
+                <h2>HTML</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates qui dicta, voluptatum fuga modi. </p>
+            </div>
+            <div class="service-card">
+                <img src="assets/css.png" alt="Ícone de código">
+                <h2>CSS</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates qui dicta, voluptatum fuga modi.</p>
+            </div>
+            <div class="service-card">
+                <img src="assets/js.png" alt="Ícone de diamante">
+                <h2>JAVASCRIPT</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates qui dicta, voluptatum fuga modi. </p>
+            </div>
+            <!-- <div class="service-card">
+                <img src="assets/vue.png" alt="Ícone de diamante">
+                <h2>VEU JS</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates qui dicta, voluptatum fuga modi. </p>
+            </div> -->
+        </div>
+    </section>
+    <section id="portfolio" class="portfolio">
+        <h1 class="title-gren">Projetos</h1>
+        
+
+        <div class="portfolio-conteiner">
+            <div class="portfolio-card">
+                <div class="img-container">
+                    <img src="assets/projetos-gif/landing-pages-city.gif" alt="Foto projeto">
+                </div>
+                <div class="languagem-containe">
+                    <ul>
+                        <li>html</li>
+                        <li>css</li>
+                        <li>js</li>
+                    </ul>
+                </div>
+                <p><b>Landing-pages-city</b></p>
+                <p>Uma landing-page de apresentação de duas cidades, <b><i>Canada</i></b> e <b><i>Estados Unidos</i></b>.<br>Objetivo treinar o Js.</p>
+                <button><a href="https://github.com/LucianoSabino/landing-page">GitHub</a></button>
+                <button><a href="https://landing-page-city.netlify.app/">Veja no Netlify</a></button>
+            </div>
+
+            <div class="portfolio-card">
+                <div class="img-container">
+                    <img src="assets/projetos-gif/starbuckes.gif" alt="Foto projeto">
+                </div>
+                <div class="languagem-containe">
+                    <ul>
+                        <li>html</li>
+                        <li>css</li>
+                    </ul>
+                </div>
+                <p>Linktree</p>
+                <p>Uma landing-page de uma empresa multinacional norte-americana, com a maior cadeia de cafeterias do mundo, a <b><i>Starbucks</i></b>.<br>Objetivo terinar o Html e Css, para criação de layout.</p>
+                <button><a href="https://github.com/LucianoSabino/landingpages/tree/main/website-moderno">GitHub</a></button>
+                <button><a href="https://website-moderno.netlify.app/">Veja no Netlify</a></button>
+            </div>
+
+            <div class="portfolio-card">
+                <div class="img-container">
+                    <img src="assets/projetos-gif/landingpage-academia.gif" alt="Foto projeto">
+                </div>
+                <div class="languagem-containe">
+                    <ul>
+                        <li>html</li>
+                        <li>css</li>
+                    </ul>
+                </div>
+                <p>Landinpage-Academia</p>
+                <p>Uma landing-page de uma academia fictícia.<br>Objetivo treianar o Css, tratamento da img fundo, Transition, ::before</p>
+                <button><a href="https://github.com/LucianoSabino/landingpages/tree/main/landingpage-academia">GitHub</a></button>
+                <button><a href="https://landingpage-academia.netlify.app/">Veja no Netlify</a></button>
+            </div>
+
+            <div class="portfolio-card">
+                <div class="img-container">
+                    <img src="assets/projetos-gif/relogio.gif" alt="Foto projeto">
+                </div>
+                <div class="languagem-containe">
+                    <ul>
+                        <li>html</li>
+                        <li>css</li>
+                        <li>js</li>
+                    </ul>
+                </div>
+                <p>Relógio</p>
+                <p>Desafio proposto, é desafio feito.<br>Um pequeno projeto Js, onde pega a hora, minutos e segundos atual, e mostra na tela</p>
+                <button><a href="https://github.com/LucianoSabino/projetos-Js/tree/main/projeto-rel%C3%B3gio">GitHub</a></button>
+            </div>
+
+            <div class="portfolio-card">
+                <div class="img-container">
+                    <img src="assets/projetos-gif/projeto-spotify.gif" alt="Foto projeto">
+                </div>
+                <div class="languagem-containe">
+                    <ul>
+                        <li>html</li>
+                        <li>css</li>
+                        <li>js</li>
+                    </ul>
+                </div>
+                <p>Spotify-Youtube</p>
+                <p>Criação de play de musica, quase parecido com o Spotify.<br>Objetivo Aprofundando conhecimento em js.</p>
+                <button><a href="https://github.com/LucianoSabino/landingpages/tree/main/landingpage-academia">GitHub</a></button> 
+            </div>
+
+            <div class="portfolio-card">
+                <div class="img-container">
+                    <img src="assets/projetos-gif/netflix.png" alt="Foto projeto">
+                </div>
+                <div class="languagem-containe">
+                    <ul>
+                        <li>html</li>
+                        <li>css</li>
+                        <li>js</li>
+                    </ul>
+                </div>
+                <p>Linktree</p>
+                <p>Projeto feito usando html, css e js com o objetivo de ser um agrupador de links para o instagram.</p>
+                <button><a href="https://github.com/LucianoSabino/landingpages/tree/main/landingpage-academia">GitHub</a></button>
+                <button><a href="https://sabino-netflix.netlify.app/">Veja no Netlify</a></button>
+            </div>
+        </div>
+    </section>
+    <section id="curriculum" class="curriculum">
+        <h1 class="title-green">Currículo</h1>
+        <div class="container">
+            <img class="curriculum-img" src="assets/Vector (3).png" alt="">
+            <div class="content">
+                <div class="curriculum-info">
+                    <span>Nome</span><b>Luciano Sabino</b>
+                    <span>Idade</span><b>18 anos</b>
+                    <span>Cidade</span><b>Salvador - BA</b>
+                    <span>Telefone</span><b>(75) 999871618</b>
+                    <span>Email</span><b>lb255043@gmail.com</b>
+                    <span>Freelance</span><b>Disponível</b>
+                    <span>Experiencia</span><b>HTML, CSS, JS, Vue Js</b>
+                </div>
+                <button class="secondary-button"><img src="assets/save.png" alt="">Baixe meu currículo completo</button>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="contact">
+        <h1>Vamos trabalhar juntos?</h1>
+        <p>Se você gostou do meu trabalho e quer que eu tire sua ideia do papel ou faça parte do seu time, entre em contato comigo! </p>
+        <button onclick="window.open('https://api.whatsapp.com/send?phone=5575999871618')">Entre em contato</button>
+        <div class="social-media">
+            <a href=""><img src="assets/insta.png" alt="instagram"></a>
+            <a href=""><img src="assets/linkedin.png" alt="linkedin"></a>
+            <a href="https://api.whatsapp.com/send?phone=5575999871618"><img src="assets/whatsapp.png" alt="whatsapp"></a>
+        </div>
+    </section>
+    <footer><p>Made by Luciano Sabino-2022</p></footer>
     <script>
         feather.replace()
     </script>
