--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="assets/logo.png" alt="logo">
+            <h2> <span>Luciano</span> Sabino</h2>
             <h2>Hellou</h2>
             <h1>I am Luciano Sabino</h1>
             <p>Programador Front-End, aqui está uma breve descrição do que eu amo e sei fazer!</p>
